chore: some updates
